# Persona-LLM-Chatbot-For-QA

./: README.md  config.ini  pyproject.toml
.github/workflows/: pipeline.yml
data/: finetune_data.txt
data/eval_data/: MCQ_Data_1.csv  MCQ_Data_2.csv  MCQ_Dataset.csv  combined.json  trivia_data.csv
data_processing/: Buzfeed_friends_mcq.ipynb  fetch_all_data.ipynb
evaluation/: evaluator.py  metrics.py
finetuning/: auth_token.txt  lora.sh  merge.ipynb  qlora.ipynb
finetuning/adapters/: call_lora_to_gguf.sh
finetuning/adapters/llama-2-7b-chat-qlora/: adapter_config.json
finetuning/llamacpp/exp1/: run_finetuning.sh
finetuning/notebook/exp1/: finetune.ipynb
host_llm/: query_llm_test.ipynb
host_llm/base_llm/: readme.md
host_llm/base_llm/inference/: inference_server.sh
host_llm/base_llm/setup/: setup_repos.sh
llm_hosting/base_llm/: main.sh
llm_hosting/base_llm/inference/: inference_server.sh  oai_like_api.sh
llm_hosting/finetuned_llm/: inference_server.sh
notebooks/: Friends_Fan.ipynb  evaluate_base_model.ipynb  evaluate_fine_tuned_model.ipynb  evaluate_rag_model.ipynb  fetch_all_data.ipynb  generate_finetuning_data.ipynb  query_llm_test.ipynb  rag.ipynb
notebooks/data/: finetune_data.txt  friends_dataset.txt
tests/: test_evaluator.py
utils/: llm.py
