[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "Persona LLM for QA Chatbot"
version = "0.1.0"
description = "A persona-based language model for QA chatbot package containing multiple personas"
authors = ["Advaith Rao <advaith652@gmail.com>", "Falgun Malhotra <falgun.malhotra2@gmail.com", "Vanshita Gupta <vanshigupta04@gmail.com"]

[tool.poetry.dependencies]
#main packages
python = "^3.8"
pandas = "^1.1.4"
scipy = "*"
numpy = "*"
jupyter = "^1.0.0"
swifter = "*"

#modeling packages
scikit-learn = "^1.3.0"
transformers = "*"
torch = "2.1.0"

#nlp packages
regex = "*"
nltk = "*"

#visualization packages
matplotlib = "*"
seaborn = "*"
wordcloud = "*"
plotly = "*"


#mlops
wandb = "*"
mlflow = "*"

#other packages
beautifulsoup4 = "4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-xdist = "*"
torchvision = "*"
torchtext = "*"

